fix: broken CSS on Integrations page in non-Chromium browsers (#3705)

--- a/frontend/web/styles/components/_panel.scss
+++ b/frontend/web/styles/components/_panel.scss
@@ -181,8 +181,8 @@ a.text-white {
     border: 1px solid $panel-border-color;
 
     img {
-      width: fit-content;
       height: 30px;
+      object-fit: contain;
     }
     .list-integrations {
       border-radius: $border-radius-xlg;
